fixed description not wrapping issue.

--- a/app/webroot/css/pages.css
+++ b/app/webroot/css/pages.css
@@ -158,6 +158,7 @@ div#slots_form .dates {
 .box-center {
     margin: auto;
     text-align: center;
+    overflow: hidden;
 }
 
 
